Assert on dragging keyframes #94360

Closed
opened 2021-12-24 06:40:59 +01:00 by Pratik Borhade · 8 comments
Member

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: AMD Radeon(TM) 535 ATI Technologies Inc. 4.5.14831 Core Profile Context 21.5.2 27.20.21003.8013

Blender Version
Broken: 81b3933abb

Short description of error
Assert when I move keyframe(s) back and forth

Exact steps for others to reproduce the error

  • Open .blend file
  • select and move that keyframe to-and-fro.

Test File:

test-anim.blend
keyframes-assert.gif

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: AMD Radeon(TM) 535 ATI Technologies Inc. 4.5.14831 Core Profile Context 21.5.2 27.20.21003.8013 **Blender Version** Broken: 81b3933abbbff4844253c04eeaf1ede672dcb566 **Short description of error** Assert when I move keyframe(s) back and forth **Exact steps for others to reproduce the error** - Open .blend file - select and move that keyframe to-and-fro. Test File: [test-anim.blend](https://archive.blender.org/developer/F12773968/test-anim.blend) ![keyframes-assert.gif](https://archive.blender.org/developer/F12773969/keyframes-assert.gif)
Author
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

#91669 was marked as duplicate of this issue

#91669 was marked as duplicate of this issue

Added subscriber: @deadpin

Added subscriber: @deadpin

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Confirmed here - all it takes is to drag any of the keyframes to before/after another keyframe and the assert will trigger.

Confirmed here - all it takes is to drag any of the keyframes to before/after another keyframe and the assert will trigger.
Sybren A. Stüvel self-assigned this 2022-03-07 14:35:56 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This issue was referenced by 5ae26e410a

This issue was referenced by 5ae26e410ab1c23a705f7d9a4873f3bb29ba86d2

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94360
No description provided.